created TestApp structure for mocking models

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "psr-4": {
             "ModelHistory\\": "src",
             "ModelHistory\\Test\\": "tests",
-            "ModelHistory\\Test\\Fixture\\": "tests/Fixture"
+            "ModelHistory\\Test\\Fixture\\": "tests/Fixture",
+            "ModelHistoryTestApp\\": "tests/ModelHistoryTestApp"
         }
     }
 }
