--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "*",
-        "cakephp/cakephp": "3.0.x-dev"
+        "cakephp/cakephp": "3.1.*"
     },
     "autoload": {
         "psr-4": {
