--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
-        "cakephp/cakephp": "3.1.*"
+        "cakephp/cakephp": "3.3.*",
+        "cakephp/cakephp-codesniffer": "dev-master"
     },
     "autoload": {
         "psr-4": {
