--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     },
     "require": {
         "php": ">=5.4",
-        "codekanzlei/cake-cktools": "~1.2.8",
+        "codekanzlei/cake-cktools": "^1.3",
         "codekanzlei/cake-frontend-bridge": "^1.2"
     },
     "require-dev": {
