--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,11 @@
         "codekanzlei/cake-frontend-bridge": "^1.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "6.3.*",
-        "cakephp/cakephp": "3.4.*",
-        "cakephp/cakephp-codesniffer": "dev-master"
+        "phpunit/phpunit": "^6.0",
+        "cakephp/cakephp": "^3.4",
+        "phpstan/phpstan": "^0.8",
+        "cakephp/cakephp-codesniffer": "^3.0",
+        "scherersoftware/coding-standard": "^3.0"
     },
     "autoload": {
         "psr-4": {
